@@ -693,16 +693,19 @@
     "init_blackjack": "**{{winner}}** começou um jogo com um BlackJack! Que Sorte!\n**Seu {{text}}:** {{prize}} :star:",
     "blackjack": "**{{winner}}** fez um BlackJack! Na mosca!\n**Seu {{text}}:** {{prize}} :star:",
     "busted": "**{{loser}}** estourou! Mais sorte da próxima vez!\n**Seu {{text}}:** {{prize}} :star:",
-    "draw": "Eita! Tu empatou com a Menhera! Como empate não é nem uma vitória quanto uma derrota, suas **{{prize}}** :star: foram devolvidas para a carteira",
+    "draw": "Eita! Tu empatou com a **Menhera**! Como empate não é nem uma vitória quanto uma derrota, suas **{{prize}}** :star: foram devolvidas para a carteira",
     "biggest": "**{{winner}}** ganhou por possuir mais pontos!\n**Seu {{text}}:** {{prize}} :star:",
-    "profit": "Lucro",
+    "profit": "Ganho",
     "loss": "Prejuízo",
     "buy": "Comprar carta",
     "stop": "Parar aposta",
     "new-game": "Apostar novamente",
     "new-game-value": "Apostar outro valor",
     "place-bet": "Faça sua aposta",
+    "another-message": "Você já iniciou outra partida",
+    "betted": "Apostado",
     "max-min-bet": "Aposta mínima é {{min}} ⭐ e máxima {{max}} ⭐",
+    "match-sequence": "Sequência de partidas",
     "restarting-game": "Iniciando uma nova partida apostando **{{bet}}** :star:. Estou embaralhando as cartas, só um momento...",
     "easter-egg-restarting-game": "**Ednaldo Pereira** disse: Cuidado para não viciar em apostas!!!"
   },
