@@ -7,6 +7,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 
 ## [Unreleased]
 
+### Added
+
+- Sequências de partidas de Blackjack! Agora é possível apostar mais de uma vez em um mesma execução do comando Blackjack. 
+
 ### Changed
 
 - O comando `/daily` agora usa os novos componentes V2 do Discord.
